--- a/style.css
+++ b/style.css
@@ -1,27 +1,179 @@
-/* --- CSS --- */ 
 
-main {
-  padding: 20px 0;
+/* 
+	STYLE.CSS:
+	One stylesheet to rule them all.
+	
+	selector { property:value }
+	
+*/
+
+@import url(http://fonts.googleapis.com/css?family=Playfair+Display:400,700|Noto+Sans:400,700|Noto+Serif);
+
+/* -------  Structure ------- */
+
+body {
+	background-image:url(images/subtle_white_mini_waves.png);
+  margin: 0;
 }
 
-section {
-  margin-bottom: 100px;
+header {
+	height: 20px;
+	background-color: #403933;
+	background-image:url(00100sPORTRAIT_00100_BURST20191102152732868_COVER.jpg);
 }
 
-h1 {
-  margin: 0 0 30px 10px;
+footer {
+	height: 84px;
+	background-color: #403933;
+	background-image:url(images/subtle_brown_mini_waves.png);
 }
 
-h2 {
-  margin: 0 10px;
-  border-bottom: 1px solid gray;
-}
-
-h3 {
-  margin: 12px 0;
-  border-bottom: 1px solid lightgray;
+.wrapper {
+	width: 580px;
+	margin: auto;	
 }
 
 
- display: flex;
-  flex-direction: row;
+
+
+/* -------  Logo ------- */
+
+header h1 {
+	font-family: 'Playfair Display', serif;
+	color: #f0eee9;
+	margin: 0px;
+	padding-top: 24px;
+	font-size: 48px;
+	text-align:center;
+}
+
+header h2 {
+	font-family: 'Playfair Display', serif;
+	color: #e3e1dc;
+	margin: 0px;
+	padding-top: 16px;
+	font-size: 22px;
+	text-align: center;
+}
+
+/* -------  Type ------- */
+
+h1, h2 {
+	color: #403933;
+	font-family: 'Noto Serif', serif;
+}
+
+h1 { font-size: 38px;}
+h2 { font-size: 30px;}
+
+p, li {
+	font-family: 'Noto Sans', sans-serif;
+	color: #2d2c2a;
+	font-size: 18px;
+	font-weight: 400;
+    line-height: 26px;
+}
+
+ul {
+ list-style-image: url('images/common/coffee-cup-icon.png');
+}
+
+a {
+	font-weight: 700;
+	text-decoration: none;	
+}
+
+a:link { color: #38786a; }
+a:visited { color: #38786a; }
+a:hover { color: #403933; }
+a:active { color: #403933; }
+
+
+a:hover {
+	text-decoration: underline;	
+}
+
+footer p {
+	color: #fff;
+	text-align: center;
+}
+footer a:link { color: #698378; }
+footer a:visited { color: #698378; }
+footer a:hover { color: #a4cdbc; }
+footer a:active { color: #a4cdbc; }
+
+
+/* -------  Elements ------- */
+
+img, iframe { border-radius: 8px;} 
+
+iframe { border: 1px solid #403933;}
+
+hr { border: .5px solid #403933;}
+
+ul.coffee li {list-style-image: url('images/coffee-cup-icon.png');}
+
+
+/* -------  Spacers ------- */  
+/* Note: There are better ways of creating space
+   in a web page, but this is an easy technique
+   for now. */
+
+.gap-sm {
+    height: 50px;
+    width: auto;
+}
+.gap-md {
+    height: 100px;
+    width: auto;
+}
+.gap-lg {
+    height: 200px;
+    width: auto;
+}
+
+.gap-footer {
+    height: 10px;
+    width: auto;
+}
+
+    
+/* -------  Layout ------- */ 
+       
+.hero {
+    background-image: url(images/header-bg.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    text-align:center;
+}
+
+.hero h1 {
+	font-size: 80px;
+	color: white;
+	text-shadow: 0 0 10px #000;
+    margin-bottom: 20px;
+}
+
+.hero h2 {
+	font-size: 20px;
+	color: white;
+	background: #6b7667;
+	display:inline;
+    padding: 3px 10px;
+    border-radius: 8px;
+}
+    
+.bg-accent {
+      background-color: #646f61;  
+    padding: 20px;
+    margin: 20px 0;
+}
+
+.bg-accent p,
+.bg-accent h2 { color: #fff; }
+
+.bg-accent a:link { color: #f0eee9; }
+.bg-accent a:visited { color: #e3e1dc; }
+.bg-accent a:hover { color: #e3e1dc; }
+.bg-accent a:active { color: #f0eee9; }
