--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 	
 */
 
-@import url(http://fonts.googleapis.com/css?family=Playfair+Display:400,700|Noto+Sans:400,700|Noto+Serif);
+@import url(https://fonts.google.com/specimen/Redressed?category=Serif,Sans+Serif,Display,Handwriting);
 
 /* -------  Structure ------- */
 
@@ -39,7 +39,7 @@ footer {
 /* -------  Logo ------- */
 
 header h1 {
-	font-family: 'Playfair Display', serif;
+	font-family: 'Redressed', serif;
 	color: #f0eee9;
 	margin: 0px;
 	padding-top: 24px;
@@ -48,7 +48,7 @@ header h1 {
 }
 
 header h2 {
-	font-family: 'Playfair Display', serif;
+	font-family: 'Redressed', serif;
 	color: #e3e1dc;
 	margin: 0px;
 	padding-top: 16px;
@@ -75,7 +75,7 @@ p, li {
 }
 
 ul {
- list-style-image: url('images/common/coffee-cup-icon.png');
+ list-style-image: url('NicePng_arrow-png_101114.png');
 }
 
 a {
@@ -111,7 +111,7 @@ iframe { border: 1px solid #403933;}
 
 hr { border: .5px solid #403933;}
 
-ul.coffee li {list-style-image: url('images/coffee-cup-icon.png');}
+ul.coffee li {list-style-image: url('NicePng_arrow-png_101114.png');}
 
 
 /* -------  Spacers ------- */  
