--- a/style.css
+++ b/style.css
@@ -22,6 +22,13 @@ header {
 	background-image:url(00100sPORTRAIT_00100_BURST20191102152732868_COVER.jpg);
 }
 
+hr {
+	   padding-left : 8vw;
+        background-color:red;
+        height:2px;
+        width:30%;
+}
+
 footer {
 	height: 84px;
 	background-color: #403933;
